# EaseCoding

./: .gitignore  README.md  cspell.json
book/ProgSelf/: hello.c  my_readelf.c  simple_section.c  static_a.c  static_b.c  tiny_hello_world.c  tiny_hello_world.lds
linux/C/easeds/: CMakeLists.txt  build-license.sh  build.sh  check_api.py  clang-check.sh  cppcheck.sh  ease_array.c  exec-unittest.sh  rpm_build.sh  run_environment.sh  version.sh
linux/C/easeds/src/: CMakeLists.txt  easeds-array-unittest.c  easeds-array.c  easeds-array.h  easeds-environment.h  easeds-helper.h  easeds-log.c  easeds-log.h  easeds-private.h  easeds-public.h  easeds-queue.h  easeds-unittest.c  easeds-unittest.h  easeds-utils.c  easeds-utils.h  easeds.h  libeaseds.map
linux/C/tool/: remove_env.c
